Auth is working.

--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -1,3 +1,10 @@
+@import '../../styles/variables';
+
 .Auth {
     display: block;
+    .auth-btn {
+        color: white;
+        background-color: $teamPrimaryColor;
+        border: 1px solid white;
+    }
 }
