--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,3 +1,12 @@
+@import '../../styles/variables';
+
 .NavBar {
     display: block;
+    .sports-roster-nav {
+        background-color: $teamPrimaryColor;
+        border: 1px solid white;
+        .logout-btn {
+            border: 1px solid black;
+        }
+    }
 }
