Printing players cards into the team component.

--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,3 +1,8 @@
 .Team {
     display: block;
+    .time-header {
+        border-bottom: 1px solid white;
+        width: 25%;
+        margin: 0 auto;
+    }
 }
