--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,8 +1,13 @@
+@import '../../styles/variables';
+
 .Team {
     display: block;
     .time-header {
         border-bottom: 1px solid white;
         width: 25%;
         margin: 0 auto;
+    }
+    .new-player-btn {
+        background-color: $teamTertiaryColor;
     }
 }
