Successfully editing players.

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -12,6 +12,9 @@
             .player-delete-button {
                 background-color: $teamPrimaryColor;
             }
+            .player-edit-button {
+                background-color: $teamTertiaryColor;
+            }
         }
         .player-img {
             height: auto; 
