Form close button working, also made some styling tweaks.

--- a/src/components/PlayerForm/PlayerForm.scss
+++ b/src/components/PlayerForm/PlayerForm.scss
@@ -1,3 +1,14 @@
+@import '../../styles/variables';
+
 .PlayerForm {
     display: block;
+    form {
+        border: 2px solid $teamPrimaryColor;
+        background-color: $teamSecondaryColor;
+        .form-header {
+            .form-close-btn {
+                background-color: $teamPrimaryColor;
+            }
+        }
+    }
 }
