--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -7,6 +7,7 @@
         border: 1px solid white;
         .logout-btn {
             border: 1px solid black;
+            background-color: $teamTertiaryColor;
         }
     }
 }
